--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         <p>Gerenciamento completo de produtos</p>
                     </div>
                     <div class="page-header-actions">
+                        <button class="btn btn-secondary" id="stock-report-btn"><i class="fas fa-file-alt"></i> Relatório</button>
                         <button class="btn btn-primary" id="add-product-btn"><i class="fas fa-plus"></i> Novo Produto</button>
                     </div>
                 </div>
@@ -299,7 +300,7 @@
         </div>
     </main>
 
-    <!-- Modais -->
+    <!-- Modais de Animais e Reservas -->
     <div id="animal-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -361,6 +362,52 @@
                     <div class="form-group"><label>Total</label><input type="text" id="total-value" readonly></div>
                 </div>
                 <div class="form-actions"><button type="button" class="btn btn-secondary" id="cancel-reservation">Cancelar</button><button type="submit" class="btn btn-primary">Salvar</button></div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Modais de Inventário -->
+    <div id="product-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="product-modal-title">Novo Produto</h3>
+                <button class="close-modal">&times;</button>
+            </div>
+            <form id="product-form">
+                <div class="form-group">
+                    <label>Imagem do Produto</label>
+                    <div class="image-upload-container">
+                        <div class="image-upload-area" id="image-upload-area">
+                            <div class="upload-placeholder"><i class="fas fa-camera"></i><p>Tirar Foto / Upload</p></div>
+                        </div>
+                        <div class="image-preview" id="image-preview" style="display:none;">
+                            <img id="preview-img" src="" alt="Preview">
+                            <button type="button" class="remove-image" id="remove-image">&times;</button>
+                        </div>
+                        <input type="file" id="product-image" accept="image/*" hidden>
+                    </div>
+                </div>
+                <div class="form-group"><label>Nome do Produto *</label><input type="text" id="product-name" required></div>
+                <div class="form-row">
+                    <div class="form-group"><label>Marca</label><input type="text" id="product-brand"></div>
+                    <div class="form-group"><label>Categoria *</label><select id="product-category" required></select></div>
+                </div>
+                <div class="form-group"><label>Animais Indicados</label><select id="product-animals" multiple class="form-control"></select></div>
+                <div class="form-row">
+                    <div class="form-group"><label>Preço Custo *</label><input type="number" id="product-cost-price" step="0.01" required></div>
+                    <div class="form-group"><label>Preço Venda *</label><input type="number" id="product-sale-price" step="0.01" required></div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group"><label>Estoque Atual *</label><input type="number" id="product-current-stock" required></div>
+                    <div class="form-group"><label>Estoque Mínimo *</label><input type="number" id="product-min-stock" required></div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group"><label>Peso (kg)</label><input type="number" id="product-weight" step="0.01"></div>
+                    <div class="form-group"><label>Data Vencimento</label><input type="date" id="product-expiry-date"></div>
+                </div>
+                <div class="form-group"><label>Fornecedor</label><input type="text" id="product-supplier"></div>
+                <div class="form-group"><label>Descrição</label><textarea id="product-description" rows="3"></textarea></div>
+                <div class="form-actions"><button type="button" class="btn btn-secondary" id="cancel-product">Cancelar</button><button type="submit" class="btn btn-primary">Salvar</button></div>
             </form>
         </div>
     </div>
