--- a/index.html
+++ b/index.html
@@ -199,6 +199,21 @@
                 </div>
             </section>
 
+            <section id="animal-profile" class="content-section">
+                <div class="page-header">
+                    <div class="page-header-content">
+                        <h1>Perfil do Pet</h1>
+                        <p>Histórico completo e dados de saúde</p>
+                    </div>
+                    <div class="page-header-actions">
+                        <button class="btn btn-secondary" onclick="navigateToSection('animals')"><i class="fas fa-arrow-left"></i> Voltar</button>
+                    </div>
+                </div>
+                <div id="animal-profile-content">
+                    <!-- Conteúdo do perfil será injetado aqui -->
+                </div>
+            </section>
+
             <section id="reservations" class="content-section">
                 <div class="page-header">
                     <div class="page-header-content">
@@ -411,6 +426,76 @@
             </form>
         </div>
     </div>
+    
+    <!-- NOVO MODAL DE ADIÇÃO DE CANIL -->
+    <div id="add-kennel-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="add-kennel-modal-title">Adicionar Novo Alojamento</h3>
+                <button class="close-modal">&times;</button>
+            </div>
+            <form id="add-kennel-form">
+                <input type="hidden" id="new-kennel-type">
+                <div class="form-group">
+                    <label for="new-kennel-type-display">Tipo de Alojamento</label>
+                    <input type="text" id="new-kennel-type-display" readonly disabled>
+                </div>
+                <div class="form-group">
+                    <label for="new-kennel-number">Próximo Número</label>
+                    <input type="number" id="new-kennel-number" readonly disabled>
+                </div>
+                <div class="form-group">
+                    <label for="new-kennel-description">Descrição (Opcional)</label>
+                    <textarea id="new-kennel-description" rows="2"></textarea>
+                </div>
+                <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" id="cancel-add-kennel">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Adicionar Canil</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- NOVO MODAL DE HISTÓRICO -->
+    <div id="history-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="history-modal-title">Adicionar Histórico de Serviço</h3>
+                <button class="close-modal">&times;</button>
+            </div>
+            <form id="history-form">
+                <div class="form-group">
+                    <label>Animal</label>
+                    <input type="text" id="history-animal-name" readonly disabled>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="history-type">Tipo de Serviço *</label>
+                        <select id="history-type" required>
+                            <option value="">Selecione</option>
+                            <option value="BANHO">Banho</option>
+                            <option value="TOSA">Tosa</option>
+                            <option value="VETERINÁRIO">Veterinário</option>
+                            <option value="MEDICAÇÃO">Medicação</option>
+                            <option value="OBSERVAÇÃO">Observação Geral</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="history-date">Data *</label>
+                        <input type="date" id="history-date" required value="${new Date().toISOString().split('T')[0]}">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="history-description">Descrição Detalhada *</label>
+                    <textarea id="history-description" rows="4" required></textarea>
+                </div>
+                <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" id="cancel-history">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Salvar Registro</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <div class="fab-container" id="fab-container">
         <div class="fab-menu" id="fab-menu">
@@ -436,6 +521,7 @@
     <script src="js/inventory.js"></script>
     <script src="js/backup.js"></script>
     <script src="js/features.js"></script>
+    <script src="js/animal-profile.js"></script> <!-- NOVO SCRIPT -->
     <script src="js/app.js"></script>
 
     <script>
