[dyad] wrote 3 file(s)

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <option value="ATIVA">Ativa</option>
                         <option value="FINALIZADA">Finalizada</option>
                     </select>
-                    <input type="month" id="month-filter">
+                    <input type="month" id="month-filter" class="month-filter-modern">
                 </div>
                 <div class="table-container">
                     <!-- A lista de cards de reservas será renderizada aqui pelo ReservationsManager -->
