[dyad] Melhorando a lista de reservas recentes do Dashboard para formato expansível. - wrote 4 file(s)

--- a/index.html
+++ b/index.html
@@ -152,17 +152,11 @@
                 <div class="charts-container">
                     <div class="chart-card"><h3>Reservas por Mês</h3><div class="chart-wrapper"><canvas id="monthlyChart"></canvas></div></div>
                     <div class="chart-card"><h3>Ocupação Atual</h3><div class="chart-wrapper"><canvas id="kennel-chart"></canvas></div></div>
-                    <div class="chart-card"><h3>Receita por Pagamento</h3><div class="chart-wrapper"><canvas id="paymentChart"></canvas></div></div>
                 </div>
                 <div class="recent-reservations">
                     <h3>Reservas Recentes</h3>
-                    <div class="table-container">
-                        <table id="recent-reservations-table">
-                            <thead>
-                                <tr><th>Animal</th><th>Tutor</th><th>Check-in</th><th>Check-out</th><th>Valor</th><th>Status</th></tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
+                    <div id="recent-reservations-list" class="dashboard-res-list">
+                        <!-- JS populate here -->
                     </div>
                 </div>
             </section>
