--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,6 @@
             <li class="menu-item" data-section="dashboard"><a href="#" onclick="navigateToSection('dashboard')"><i class="fas fa-chart-line"></i><span>Dashboard</span></a></li>
             <li class="menu-item" data-section="animals"><a href="#" onclick="navigateToSection('animals')"><i class="fas fa-dog"></i><span>Animais</span></a></li>
             <li class="menu-item" data-section="reservations"><a href="#" onclick="navigateToSection('reservations')"><i class="fas fa-calendar-check"></i><span>Reservas</span></a></li>
-            <li class="menu-item" data-section="inventory"><a href="#" onclick="navigateToSection('inventory')"><i class="fas fa-boxes"></i><span>Estoque</span></a></li>
             <li class="menu-item" data-section="reports"><a href="#" onclick="navigateToSection('reports')"><i class="fas fa-chart-bar"></i><span>Relatórios</span></a></li>
         </ul>
     </nav>
@@ -115,11 +114,6 @@
                 <div class="table-container"></div>
             </section>
 
-            <section id="inventory" class="content-section">
-                <div class="page-header"><div class="page-header-content"><h1>Estoque</h1><p>Produtos</p></div><div class="page-header-actions"><button class="btn btn-primary btn-sm" id="add-product-btn"><i class="fas fa-plus"></i> Novo</button></div></div>
-                <div class="table-container"><table id="products-table"><thead><tr><th>Img</th><th>Nome</th><th>Cat</th><th>Est</th><th>Ações</th></tr></thead><tbody></tbody></table></div>
-            </section>
-
             <section id="reports" class="content-section">
                 <div class="page-header"><div class="page-header-content"><h1>Relatórios</h1><p>Estatísticas</p></div></div>
                 <div class="reports-grid">
@@ -150,33 +144,73 @@
         </div>
     </div>
 
-    <div id="reservation-modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header"><h3>Nova Reserva</h3><button class="close-modal">&times;</button></div>
-            <form id="reservation-form">
-                <div class="form-group"><label>Animal *</label><select id="reservation-animal" required></select></div>
-                <div class="form-row"><div class="form-group"><label>Tipo *</label><select id="reservation-accommodation-type" required></select></div><div class="form-group"><label>Nº *</label><select id="reservation-kennel-number" required disabled></select></div></div>
-                <div class="form-row"><div class="form-group"><label>Diária *</label><input type="number" id="daily-rate" step="0.01" required></div></div>
-                <div class="form-row"><div class="form-group"><label>Entrada *</label><input type="date" id="checkin-date" required></div><div class="form-group"><label>Saída *</label><input type="date" id="checkout-date" required></div></div>
-                <div class="services-selection">
-                    <label><input type="checkbox" id="whatsapp-receipt" checked> Enviar recibo WhatsApp</label>
-                </div>
-                <div class="form-group"><label>Pagamento *</label><select id="payment-method" required><option value="PIX">PIX</option><option value="DINHEIRO">Dinheiro</option><option value="CARTAO">Cartão</option></select></div>
-                <div class="form-group"><label>Total</label><input type="text" id="total-value" readonly></div>
-                <div class="form-actions"><button type="button" class="btn btn-secondary" onclick="hotelPetApp.closeAllModals()">Cancelar</button><button type="submit" class="btn btn-primary">Salvar</button></div>
-            </form>
-        </div>
-    </div>
-
+    <!-- MODAL DE HISTÓRICO ATUALIZADO COM VACINAÇÃO -->
     <div id="history-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header"><h3>Adicionar Registro</h3><button class="close-modal">&times;</button></div>
             <form id="history-form">
                 <input type="hidden" id="history-animal-name">
-                <div class="form-group"><label>Tipo *</label><select id="history-type" required><option value="BANHO">Banho</option><option value="TOSA">Tosa</option><option value="VETERINÁRIO">Veterinário</option><option value="MEDICAÇÃO">Medicação</option><option value="HOSPEDAGEM">Hospedagem</option><option value="OUTRO">Outro</option></select></div>
-                <div class="form-group"><label>Data *</label><input type="date" id="history-date" required></div>
-                <div class="form-group"><label>Descrição *</label><textarea id="history-description" rows="3" required></textarea></div>
-                <div class="form-actions"><button type="button" class="btn btn-secondary" id="cancel-history">Cancelar</button><button type="submit" class="btn btn-primary">Salvar</button></div>
+                <div class="form-row">
+                    <div class="form-group"><label>Tipo *</label>
+                        <select id="history-type" required onchange="window.animalProfileManager.onHistoryTypeChange(this.value)">
+                            <option value="">Selecione</option>
+                            <option value="VACINAÇÃO">Vacinação 💉</option>
+                            <option value="BANHO">Banho</option>
+                            <option value="TOSA">Tosa</option>
+                            <option value="VETERINÁRIO">Veterinário</option>
+                            <option value="MEDICAÇÃO">Medicação</option>
+                            <option value="HOSPEDAGEM">Hospedagem</option>
+                            <option value="OBSERVAÇÃO">Observação Geral</option>
+                        </select>
+                    </div>
+                    <div class="form-group"><label>Data Aplicação *</label><input type="date" id="history-date" required></div>
+                </div>
+
+                <!-- Campos de Vacinação Inteligentes -->
+                <div id="vaccine-fields" style="display: none; background: #f0f7ff; padding: 1.25rem; border-radius: 12px; border: 1px solid #dbeafe; margin: 0 1.5rem 1rem 1.5rem;">
+                    <div class="form-group" style="padding:0 0 1rem 0;">
+                        <label>Nome da Vacina *</label>
+                        <select id="vac-name" onchange="window.animalProfileManager.calculateBooster()">
+                            <optgroup label="Cães (Canina)">
+                                <option value="V8 (Polivalente)">V8 (Polivalente)</option>
+                                <option value="V10 (Polivalente)">V10 (Polivalente)</option>
+                                <option value="V11 (Polivalente)">V11 (Polivalente)</option>
+                                <option value="Antirrábica">Antirrábica</option>
+                                <option value="Gripe (Bronchi-Shield/Pneumodog)">Gripe (Bronchiguard/Pneumodog)</option>
+                                <option value="Giárdia">Giárdia</option>
+                                <option value="Leishmaniose">Leishmaniose</option>
+                            </optgroup>
+                            <optgroup label="Gatos (Felina)">
+                                <option value="V3 (Tríplice Felina)">V3 (Tríplice Felina)</option>
+                                <option value="V4 (Quádrupla Felina)">V4 (Quádrupla Felina)</option>
+                                <option value="V5 (Quíntupla Felina)">V5 (Quíntupla Felina)</option>
+                            </optgroup>
+                        </select>
+                    </div>
+                    <div class="form-row" style="padding:0;">
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Dose *</label>
+                            <select id="vac-dose" onchange="window.animalProfileManager.calculateBooster()">
+                                <option value="1ª Dose">1ª Dose</option>
+                                <option value="2ª Dose">2ª Dose</option>
+                                <option value="3ª Dose">3ª Dose</option>
+                                <option value="Reforço Anual">Reforço Anual</option>
+                            </select>
+                        </div>
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Próximo Reforço</label><input type="date" id="vac-next-date"></div>
+                    </div>
+                    <div class="form-row" style="padding:0;">
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Lote</label><input type="text" id="vac-lote" placeholder="Lote"></div>
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Fabricante</label><input type="text" id="vac-lab" placeholder="Fabricante"></div>
+                    </div>
+                    <div class="form-row" style="padding:0;">
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Peso (kg)</label><input type="text" id="vac-weight" placeholder="0.0"></div>
+                        <div class="form-group" style="padding:0 0 1rem 0;"><label>Valor (R$)</label><input type="number" id="vac-price" step="0.01"></div>
+                    </div>
+                    <div class="form-group" style="padding:0;"><label>Veterinário</label><input type="text" id="vac-vet" placeholder="Nome/CRMV"></div>
+                </div>
+
+                <div class="form-group"><label>Descrição / Reações *</label><textarea id="history-description" rows="3" required></textarea></div>
+                <div class="form-actions"><button type="button" class="btn btn-secondary" id="cancel-history">Cancelar</button><button type="submit" class="btn btn-primary">Salvar Registro</button></div>
             </form>
         </div>
     </div>
@@ -198,7 +232,6 @@
     <script src="js/reservations.js"></script>
     <script src="js/reports.js"></script>
     <script src="js/kennels.js"></script>
-    <script src="js/inventory.js"></script>
     <script src="js/backup.js"></script>
     <script src="js/features.js"></script>
     <script src="js/animal-profile.js"></script>
