--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
     <header class="mobile-header">
         <div class="mobile-header-left">
             <button class="header-menu-btn" onclick="toggleSidebar()"><i class="fas fa-bars"></i></button>
-            <span class="mobile-header-title" id="mobile-page-title">Hotel Pet CÁ</span>
+            <span class="mobile-header-title" id="mobile-page-title">Visão Geral</span>
         </div>
     </header>
 
