--- a/www/index.html
+++ b/www/index.html
@@ -1029,7 +1029,12 @@
 
     <script src="js/config.js"></script>
     <script src="js/storage-service.js"></script>
-    <script src="js/database.js"></script>
+
+    <!-- Supabase Migration -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase-config.js"></script>
+    <script src="js/supabase-db.js"></script>
+    <!-- <script src="js/database.js"></script> -->
     <script src="js/dashboard.js"></script>
     <script src="js/animals.js"></script>
     <script src="js/reservations.js"></script>
